# brain-waves-project

./: .gitignore  README.md  pyproject.toml  record_eeg.py  sonify_eeg.py  test_muse.py
scripts/: motor.py  muse_motor.py  muse_relax_motor.py  plot_session.py  quick_sonify.py  run_events.py  run_record.py  run_sonify.py  test_audio.py
tests/: test_connectivity.py  test_decode.py  test_events.py  test_recording.py  test_sound.py
thebox/: __init__.py  config.py  pipeline.py
thebox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
thebox/ble/: connection.py  protocol.py
thebox/eeg/: bands.py  filters.py  stream.py
thebox/events/: alpha.py  base.py  blink.py  bus.py  clench.py
thebox/sound/: base.py  mixer.py  noise.py  oscillator.py  output.py
