[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "thebox"
version = "0.1.0"
description = "EEG-to-sound engine for Muse 2"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
    "numpy>=1.26",
    "scipy>=1.12",
    "sounddevice>=0.4",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["thebox*"]
